# remotelink

./: Cargo.toml  README.md  test
.cargo/: config.toml
remotelink_client/: Cargo.toml
remotelink_client/src/: lib.rs
remotelink_preload/: Cargo.toml
remotelink_preload/src/: fd_map.rs  ffi.rs  lib.rs
scripts/: build-aarch64.sh  deploy-aarch64.sh
src/: file_client.rs  file_server.rs  file_watcher.rs  host.rs  lib.rs  log.rs  main.rs  message_stream.rs  messages.rs  options.rs  remote_runner.rs  target.rs  tests.rs
tests/: dlopen_test.c  error_tests.rs  fallback_test.c  fallback_test.rs  file_server_comprehensive_test.rs  file_server_tests.rs  implicit_link_simple.c  implicit_link_test.c  integration_tests.rs  ld_preload_integration_test.rs  ld_preload_test.c  shared_lib_loading_test.rs  shared_lib_test.c  stress_tests.rs  unit_tests.rs  watch_tests.rs
tests/common/: mod.rs
