[package]
name = "remotelink"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
bincode = "1.3.1"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
