[package]
name = "remotelink"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
log = "0.4"
bincode = "1.3"
anyhow = "1.0"
simple_logger = "5.0"
notify-debouncer-mini = "0.4"
libc = "0.2"
uuid = { version = "1.0", features = ["v4"] }
